second round of revisions
Added annotations

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@ MNEPython/.ipynb_checkpoints/05ICA-checkpoint.ipynb
 .spyproject/config/defaults/defaults-vcs-0.2.0.ini
 MNEPython/.ipynb_checkpoints/07EventRelatedFields-checkpoint.ipynb
 MNEPython/.ipynb_checkpoints/Untitled-checkpoint.ipynb
+MNEPython/.ipynb_checkpoints/01Introduction-checkpoint.ipynb
+MNEPython/.ipynb_checkpoints/04ArtefactAnnotation-checkpoint.ipynb
+MNEPython/.ipynb_checkpoints/01Introduction-checkpoint.ipynb
+MNEPython/.ipynb_checkpoints/04ArtefactAnnotation-checkpoint.ipynb
